Added redirect to privacy policy

--- a/schpit/privacy/index.html
+++ b/schpit/privacy/index.html
@@ -1,1 +1,9 @@
-test pp
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta http-equiv="Refresh" content="0; url=https://www.iubenda.com/api/privacy-policy/29787015" />
+  </head>
+  <body>
+    <p>Please follow <a href="https://www.iubenda.com/api/privacy-policy/29787015">this link</a>.</p>
+  </body>
+</html>
